<resources>
    <string name="app_name">oving2</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="defaultFirstNumber">3</string>
    <string name="defaultSecondNumber">5</string>
    <string name="answer">Answer</string>
    <string name="defaultAnswer">8</string>
    <string name="upper_limit">Upper limit</string>
    <string name="defaultUpperlimit">10</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="rightAnswer">Riktig!</string>
    <string name="wrongAnswer">Feil! Riktig svar er </string>
</resources>